--- a/CSSyDisenoWebResponsive/css/estilos.css
+++ b/CSSyDisenoWebResponsive/css/estilos.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Dancing Script', cursive;
+	background-color: #02010a;
+}
 img{
 	border: 1px solid black;
 }
@@ -50,6 +54,7 @@ width: 100%;
 	margin: 0;
   padding: 0;
   text-align: right;
+	font-weight: bold;
 }
 
 .c21 {
@@ -136,9 +141,16 @@ div[class^="cFoot"] {
     color: #e9e9e9;
 }
 a, a:hover, a:link {
-    text-decoration: none;
+  /*  text-decoration: none;*/
     outline: 0;
+		font-weight: bold;
+		color: white;
 }
+
+.aInicio{
+	text-decoration: none;
+}
+
 .icon-facebook {
     background-image: url(../images/facebook.png);
     background-repeat: no-repeat;
